# amdgpu-fanc

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  amdgpu-fan-control.service  bindgen.sh  build.rs  example_config
src/: app_error.rs  config.rs  error.rs  fan_control.rs  hwmon_files.rs  interpolation.rs  main.rs  mode.rs  pwm_writer.rs  signals.rs  temperature_reader.rs
src/fan_control/: error.rs  pwm_writer.rs  temperature_reader.rs
src/interpolation/: error.rs
src/signals/: bindings.rs  mod.rs  signal_handling.c  signal_handling.cpp  signal_handling.h  signal_handling.hpp
