[package]
categories = ["command-line-utilities", "hardware-support"]
description = "A lightweight and minimal utility for controlling linux amdgpu fans"
edition = "2021"
keywords = ["amdgpu", "fan", "fan control"]
license-file = "LICENSE"
name = "amdgpu-fanc"
repository = "https://github.com/remnantofcliff/amdgpu-fanc"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[build-dependencies]
cc = "1.0.73"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
thiserror = "1.0.37"
